[FIXED] ASCII  error

--- a/env.template
+++ b/env.template
@@ -16,7 +16,7 @@ LLM_API_KEY=YOUR_OPENROUTER_API_KEY_HERE
 LLM_API_BASE=https://openrouter.ai/api/v1
 LLM_MODEL=deepseek/deepseek-r1-0528:free
 LLM_HTTP_REFERER=https://your-website.com  # 可選：你的網站 URL
-LLM_X_TITLE=投資概念問答 Bot  # 可選：應用程式名稱
+LLM_X_TITLE=Investment Q&A Bot  # 可選：應用程式名稱（必須為 ASCII）
 
 # ===== 伺服器設定 =====
 HOST=0.0.0.0
