[BUG-FIXED] Organize import statements in richmenu.py

--- a/env.template
+++ b/env.template
@@ -3,7 +3,8 @@
 
 # ===== 資料庫設定 =====
 # Zeabur PostgreSQL（雲端資料庫）
-DATABASE_URL=postgresql://root:h1P49skICzdYvESZJ6cXmi253b8lT70u@cgk1.clusters.zeabur.com:23034/metabear
+DATABASE_URL=postgresql://root:h1P49skICzdYvESZJ6cXmi253b8lT70u@service-695a21b385bfb003975117f8:5432/zeabur
+
 
 # ===== LINE Bot 設定 =====
 # 請從 https://developers.line.biz/console/ 取得
