--- a/env.template
+++ b/env.template
@@ -18,6 +18,7 @@ LLM_API_BASE=https://openrouter.ai/api/v1
 LLM_MODEL=deepseek/deepseek-r1-0528:free
 LLM_HTTP_REFERER=https://your-website.com  # 可選：你的網站 URL
 LLM_X_TITLE=Investment Q&A Bot  # 可選：應用程式名稱（必須為 ASCII）
+MAX_TOKENS=5000
 
 # ===== 伺服器設定 =====
 HOST=0.0.0.0
